--- a/appweb/proyectoweb/templates/CRUD/listar.html
+++ b/appweb/proyectoweb/templates/CRUD/listar.html
@@ -1,14 +1,216 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Lista de Usuarios</title>
-</head>
-<body>
-    <h1>Lista de Usuarios</h1>
-    <ul>
-        {% for usuario in usuarios %}
-            <li>{{ usuario.username }}</li>
+    <head>
+        <meta charset="utf-8">
+        <title>AiresAcondicionados</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta content="Free HTML Templates" name="keywords">
+        <meta content="Free HTML Templates" name="description">
+    
+        <!-- Favicon -->
+        <link href="img/favicon.ico" rel="icon">
+    
+        <!-- Google Web Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet">
+    
+        <!-- Font Awesome -->
+        <link href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css' %}"
+            rel="stylesheet">
+    
+        <!-- Libraries Stylesheet -->
+        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    
+        <!-- Customized Bootstrap Stylesheet -->
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <!-- Nuevo archivo CSS -->
+    
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js">
+        
+    
+    
+    </head>
+    
+    <body>
+    
+        {% if messages %}
+        {% for message in messages %}
+        <script>
+            const Toast = Swal.mixin({
+                toast: true,
+                position: 'top-center',
+                showConfirmButton: true,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener('mouseenter', Swal.stopTimer)
+                  toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+              })
+              
+              Toast.fire({
+                icon: 'success',
+                text:'{{ message }}'
+              })
+        </script>
         {% endfor %}
-    </ul>
+        {% endif %}
+        <!-- Topbar Start -->
+        <div class="container-fluid bg-dark">
+            <div class="row py-2 px-lg-5">
+                <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+                    <div class="d-inline-flex align-items-center text-white">
+                        <small><i class="fa fa-phone-alt mr-2"></i>+569-65284777</small>
+                        <small class="px-3">|</small>
+                        <small><i class="fa fa-envelope mr-2"></i>pab.toro@duocuc.cl</small>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center text-lg-right">
+                    <div class="d-inline-flex align-items-center">
+                        <a class="text-white px-2" href="">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="text-white px-2" href="">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a class="text-white px-2" href="">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a class="text-white px-2" href="">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="text-white pl-2" href="">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Topbar End -->
+    
+    
+        <!-- Navbar Start -->
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
+                <a href="{% url 'home' %}" class="navbar-brand ml-lg-3">
+                    <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>BUENOSAIRES</h1>
+                </a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+                    <div class="navbar-nav m-auto py-0">
+                        <a href="{% url 'home' %}" class="nav-item nav-link">Hogar</a>
+                        <a href="{% url 'nosotros' %}" class="nav-item nav-link">Nosotros</a>
+                        <a href="{% url 'service' %}" class="nav-item nav-link">Servicios</a>
+                        <a href="{% url 'galeria' %}" class="nav-item nav-link">galeria</a>
+                        <a href="{% url 'contacto' %}" class="nav-item nav-link">Contacto</a>
+    
+                        <!-- metodo para cerrar sesion y mostrar -->
+                        {% if user.is_authenticated %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                {{ user.username }}
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesion</a></li>
+                                {% if user.is_superuser  %}
+                                <li><a class="dropdown-item" href="{% url 'admin:index' %}">Pagina de administracion</a></li>
+                                {% endif %}
+                                {% if user.is_staff %}
+                                <li><a href="{% url 'listar_usuarios' %}" class="dropdown-item">Listar usuarios </a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                        {% else %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Iniciar Sesion
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{% url 'login' %}">Iniciar Sesion</a></li>
+                                <li><a class="dropdown-item" href="{% url 'registro' %}">Registrarse</a></li>
+                            </ul>
+                        </li>
+                        {% endif %}
+    
+    
+    
+    
+                    </div>
+            </nav>
+        </div>
+    
+        <!-- Navbar End -->
+<body>
+    
+    <div class="page-content page-container" id="page-content">
+        <link href="{% static 'css/tabla.css' %}" rel="stylesheet">
+        <div class="padding">
+            <div class="row container d-flex justify-content-center">
+    <div class="col-lg-8 grid-margin stretch-card">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4 class="card-title">Lista de Usuarios</h4>
+                        <table class="table table-striped table-hover table-responsive-sm">
+                          <thead style="color:black">
+                            <tr>
+                                <th> #</th>
+                              <th>Nombre de Usuario</th>
+                              <th>Ultimo Acceso</th>
+                              <th>Email</th>
+                              <th>Es Staff</th>
+                              <th>Estado</th>
+                              <th>Acciones</th>
+
+                            </tr>
+                          </thead>
+                          <tbody style="color:black;font-weight: bold;">
+                            {% for usuario in usuarios %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ usuario.username | title}}</td>
+                                <td>{{ usuario.last_login | date:"d/m/Y" }}</td>
+                                <td>{{ usuario.email }}</td>
+                                <td>
+                                    
+                                    <label class="badge badge-success">
+                                    {% if usuario.is_staff %}
+                                    SI
+                                    {% else %}
+                                    NO
+                                    {% endif %}
+                                </label>
+                                </td>
+                              <td><label class="badge badge-success">
+                                {% if usuario.is_active  %}
+                                Activo
+                                {% else %}
+                                Inactivo
+                                {% endif %}
+                            </label></td>
+                            <td><a href="{% url 'modificar_usuario' usuario.id %}" class="btn btn-secundary">Modificar</a></td>
+                            <td><a href="{% url 'eliminar_usuario' usuario.id %}" class="btn btn-warning">Eliminar</a></td>
+
+                            </tr>
+                            {% endfor %}
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                  </div>
 </body>
 </html>
