--- a/appweb/proyectoweb/templates/CRUD/listar.html
+++ b/appweb/proyectoweb/templates/CRUD/listar.html
@@ -153,64 +153,52 @@
     
         <!-- Navbar End -->
 <body>
-    
-    <div class="page-content page-container" id="page-content">
-        <link href="{% static 'css/tabla.css' %}" rel="stylesheet">
-        <div class="padding">
-            <div class="row container d-flex justify-content-center">
-    <div class="col-lg-8 grid-margin stretch-card">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title">Lista de Usuarios</h4>
-                        <table class="table table-striped table-hover table-responsive-sm">
-                          <thead style="color:black">
+    <div class="d-flex justify-content-center" style="padding-top: 10px;">
+        <div class="col-lg-8 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Lista de Usuarios</h4>
+                    <table class="table table-striped table-hover table-responsive-sm">
+                        <thead style="color:black">
                             <tr>
-                                <th> #</th>
-                              <th>Nombre de Usuario</th>
-                              <th>Ultimo Acceso</th>
-                              <th>Email</th>
-                              <th>Es Staff</th>
-                              <th>Estado</th>
-                              <th>Acciones</th>
-
+                                <th>#</th>
+                                <th>Nombre de Usuario</th>
+                                <th>Último Acceso</th>
+                                <th>Email</th>
+                                <th>Es Staff</th>
+                                <th>Estado</th>
+                                <th>Acciones</th>
                             </tr>
-                          </thead>
-                          <tbody style="color:black;font-weight: bold;">
-                            {% for usuario in usuarios %}
+                        </thead>
+                        <tbody style="color:black;font-weight: bold;">
                             <tr>
-                                <td>{{ forloop.counter }}</td>
-                                <td>{{ usuario.username | title}}</td>
-                                <td>{{ usuario.last_login | date:"d/m/Y" }}</td>
-                                <td>{{ usuario.email }}</td>
+                                <td>1</td>
+                                <td>Admin</td>
+                                <td>10/06/2023</td>
+                                <td>admin@admin.cl</td>
                                 <td>
-                                    
                                     <label class="badge badge-success">
-                                    {% if usuario.is_staff %}
-                                    SI
-                                    {% else %}
-                                    NO
-                                    {% endif %}
-                                </label>
+                                        SI
+                                    </label>
                                 </td>
-                              <td><label class="badge badge-success">
-                                {% if usuario.is_active  %}
-                                Activo
-                                {% else %}
-                                Inactivo
-                                {% endif %}
-                            </label></td>
-                            <td><a href="{% url 'modificar_usuario' usuario.id %}" class="btn btn-secundary">Modificar</a></td>
-                            <td><a href="{% url 'eliminar_usuario' usuario.id %}" class="btn btn-warning">Eliminar</a></td>
-
+                                <td>
+                                    <label class="badge badge-success">
+                                        Activo
+                                    </label>
+                                </td>
+                                <td>
+                                    <a href="/modificar_usuario/4/" class="btn btn-secundary">Modificar</a>
+                                    <a href="/eliminar_usuario/4/" class="btn btn-warning">Eliminar</a>
+                                </td>
                             </tr>
-                            {% endfor %}
-                          </tbody>
-                        </table>
-                      </div>
-                    </div>
-                  </div>
+                        </tbody>
+                    </table>
                 </div>
-                </div>
-                  </div>
+            </div>
+        </div>
+    </div>
+    
+    
+    
 </body>
 </html>
