--- a/appweb/proyectoweb/templates/CRUD/listar.html
+++ b/appweb/proyectoweb/templates/CRUD/listar.html
@@ -187,8 +187,8 @@
                                     </label>
                                 </td>
                                 <td>
-                                    <a href="/modificar_usuario/4/" class="btn btn-secundary">Modificar</a>
-                                    <a href="/eliminar_usuario/4/" class="btn btn-warning">Eliminar</a>
+                                    <a href="/modificar_usuario/4/" class="btn btn-warning">Modificar</a>
+                                    <a href="/eliminar_usuario/4/" class="btn btn-danger">Eliminar</a>
                                 </td>
                             </tr>
                         </tbody>
