--- a/appweb/proyectoweb/templates/Registration/formulario_registro.html
+++ b/appweb/proyectoweb/templates/Registration/formulario_registro.html
@@ -33,7 +33,7 @@
         <div id="central">
             <div id="login">
                 <div class="titulo">
-                    Bienvenido
+                    Registro Usuario
                 </div>
                 <form method="post">
                         {% csrf_token %}
