--- a/appweb/proyectoweb/templates/CRUD/listar.html
+++ b/appweb/proyectoweb/templates/CRUD/listar.html
@@ -34,7 +34,24 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js">
-        
+        <script>
+
+            function eliminar_usuario() {
+                Swal.fire({
+                    title: 'Estas Seguro"?',
+                    text: "Esta Acccion no se puede desacer",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    CancelButtonText: 'NO, Cancelar',
+                    confirmButtonText: 'SI, Eliminar!'
+                  }).then(function(result) {
+                    if (result.isConfirmed) {
+                        window.location.href = "/eliminar_usuario/"+id+"/";
+                      
+                    }
+                  })
+            }
+        </script>
     
     
     </head>
@@ -153,50 +170,93 @@
     
         <!-- Navbar End -->
 <body>
-    <div class="d-flex justify-content-center" style="padding-top: 10px;">
-        <div class="col-lg-8 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Lista de Usuarios</h4>
-                    <table class="table table-striped table-hover table-responsive-sm">
-                        <thead style="color:black">
-                            <tr>
-                                <th>#</th>
-                                <th>Nombre de Usuario</th>
-                                <th>Último Acceso</th>
-                                <th>Email</th>
-                                <th>Es Staff</th>
-                                <th>Estado</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody style="color:black;font-weight: bold;">
-                            <tr>
-                                <td>1</td>
-                                <td>Admin</td>
-                                <td>10/06/2023</td>
-                                <td>admin@admin.cl</td>
-                                <td>
-                                    <label class="badge badge-success">
-                                        SI
-                                    </label>
-                                </td>
-                                <td>
-                                    <label class="badge badge-success">
-                                        Activo
-                                    </label>
-                                </td>
-                                <td>
-                                    <a href="/modificar_usuario/4/" class="btn btn-warning">Modificar</a>
-                                    <a href="/eliminar_usuario/4/" class="btn btn-danger">Eliminar</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+
+    {% if messages %}
+    {% for message in messages %}
+    <script>
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+          }).then((result) => {
+            if (result.isConfirmed) {
+              Swal.fire(
+                'Deleted!',
+                'Your file has been deleted.',
+                'success'
+              )
+            }
+          })
+    </script>
+    {% endfor %}
+    {% endif %}
+    <div class="page-content page-container" id="page-content">
+        <link href="{% static 'css/tabla.css' %}" rel="stylesheet">
+        <div class="padding">
+            <div class="d-flex justify-content-center">
+                <div class="col-lg-8 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Lista de Usuarios</h4>
+                            <table class="table table-striped table-hover table-responsive-sm">
+                                <thead style="color:black">
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Nombre de Usuario</th>
+                                        <th>Ultimo Acceso</th>
+                                        <th>Email</th>
+                                        <th>Es Staff</th>
+                                        <th>Estado</th>
+                                        <th>Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody style="color:black;font-weight: bold;">
+                                    {% for usuario in usuarios %}
+                                    <tr>
+                                        <td>{{ forloop.counter }}</td>
+                                        <td>{{ usuario.username | title}}</td>
+                                        <td>{{ usuario.last_login | date:"d/m/Y" }}</td>
+                                        <td>{{ usuario.email }}</td>
+                                        <td>
+                                            <label class="badge badge-success">
+                                                {% if usuario.is_staff %}
+                                                    SI
+                                                {% else %}
+                                                    NO
+                                                {% endif %}
+                                            </label>
+                                        </td>
+                                        <td>
+                                            <label class="badge badge-success">
+                                                {% if usuario.is_active  %}
+                                                    Activo
+                                                {% else %}
+                                                    Inactivo
+                                                {% endif %}
+                                            </label>
+                                        </td>
+                                        <td>
+                                            <div class="btn-group" >
+                                                <a href="{% url 'modificar_usuario' usuario.id %}" class="btn btn-warning">Modificar</a>
+                                                &nbsp;
+                                                <a href="{% url 'eliminar_usuario' usuario.id %}"  class="btn btn-danger">Eliminar</a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
     
     
     
