--- a/appweb/proyectoweb/templates/CRUD/listar.html
+++ b/appweb/proyectoweb/templates/CRUD/listar.html
@@ -240,10 +240,10 @@
                                             </label>
                                         </td>
                                         <td>
-                                            <div class="btn-group" >
+                                            <div class="btn-group">
                                                 <a href="{% url 'modificar_usuario' usuario.id %}" class="btn btn-warning">Modificar</a>
-                                                &nbsp;
-                                                <a href="{% url 'eliminar_usuario' usuario.id %}"  class="btn btn-danger">Eliminar</a>
+                                                &nbsp;&nbsp;
+                                                <a href="{% url 'eliminar_usuario' usuario.id %}" class="btn btn-danger">Eliminar</a>
                                             </div>
                                         </td>
                                     </tr>
