--- a/appweb/proyectoweb/templates/galeria.html
+++ b/appweb/proyectoweb/templates/galeria.html
@@ -98,6 +98,7 @@
                       <li><a class="dropdown-item" href="{%url 'listar_productos'%}">Lista Inventario</a></li>
                       <li><a class="dropdown-item" href="#">Agregar Inventario</a></li>
                       <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="{%url 'agregar_categoria'%}">Agregar Categoria</a></li>
                 {% endif %}
                     </ul>
                   </div>
