--- a/appweb/proyectoweb/templates/CRUD/listar_producto.html
+++ b/appweb/proyectoweb/templates/CRUD/listar_producto.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -191,7 +192,6 @@
                                         <th>Descripcion</th>
                                         <th>precio</th>
                                         <th>stock</th>
-                                        <th>imagen</th>
                                         <th>Categoria</th>
                                     </tr>
                                 </thead>
@@ -201,11 +201,8 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>{{ p.nombre | title}}</td>
                                         <td>{{ p.descripcion | title }}</td>
-                                        <td>{{ p.precio }}</td>
+                                        <td>{{ p.precio|floatformat:0|intcomma }}</td>
                                         <td>{{p.stock}}</td>
-                                        <td>
-                                            <img src="{{ p.imagen.url }}" alt="Imagen" style="max-width: 100px; max-height: 100px;">
-                                        </td>
                                         <td>{{p.Categoria | title}}</td>
                                         <td>
                                             <div class="btn-group">
