--- a/appweb/proyectoweb/templates/galeria.html
+++ b/appweb/proyectoweb/templates/galeria.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -264,6 +264,7 @@
                 </ul>
             </div>
         </div>
+    </div>
     </div>
     <!-- Footer End -->
 
